--- a/demo3.html
+++ b/demo3.html
@@ -6,15 +6,13 @@
       content="width=device-width, initial-scale=1" />
     <title>React Demo Week 2 Day 1</title>
     <script src="https://unpkg.com/react/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script> 
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
   </head>
   <body>
 
     <div id="root"></div>
 
-    <script type="text/babel" src="demo3.js"></script>
-
-    
+  <script type="text/babel" data-presets="env,react" src="demo3.js"></script>    
   </body>
 </html>
