--- a/demo4.html
+++ b/demo4.html
@@ -6,8 +6,8 @@
       content="width=device-width, initial-scale=1" />
     <title>React Demo Week 2 Day 1</title>
     <script src="https://unpkg.com/react/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script> 
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
   </head>
   <body>
 
